--- a/html/cadastro-empresa1.html
+++ b/html/cadastro-empresa1.html
@@ -7,8 +7,9 @@
     <script type="module" src="../js/cadastro-empresa1.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="../css/root.css">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/cadastro-empresa1.css"> 
+    <link rel="stylesheet" href="../css/cadastro.css"> 
 
 </head> 
 
@@ -26,7 +27,6 @@
             </div> 
 
 </div> 
-
 
     <div class="container">
         <selection>
@@ -52,17 +52,17 @@
                             <span id="cnpjError" style="color: red; display: none;"></span>
                         </div>
                         <div>
-                            <button id="next" type="button"> Continuar
-                                <img src="../css/img/seta-direita 2.png" alt="Descrição da Imagem">
-                            </button>
-                            <p>Já possui uma conta? <span class="palavra">Login<span> 
+                            <button id="next" type="button"> Continuar >
                                 
+                            </button>
+                                <p>Já possui uma conta?  
+                                    <a href="login.html" class="palavra">Login</a>  
                                 </p>
                         </div>
                     </form>
                 </div>
-            </div>
         </selection>
+    </div>
         <div class="desc-container" >
       <h1>Crie uma conta para gerenciar sua empresa!</h1>
       <p>Com a Transporta Web, você pode gerenciar toda a operação de transporte, 
