--- a/html/viagens.html
+++ b/html/viagens.html
@@ -21,7 +21,7 @@
                 <span>Bem-vindo,<br><span class="name">Fulano de Tal</span></span>
             </div>
             <div class="button-group">
-                <a href="*historico*" class="button historico">Histórico</a>
+                <a href="paginaHome.html" class="button historico">Home</a>
                 <a href="viagens.html" class="button viagens">Viagens</a>
                 <a href="*motoristas*" class="button motoristas">Motoristas</a>
                 <a href="perfil-motorista.html" class="button test"><p>Perfil</p></a> 
