--- a/html/cadastro-empresa.html
+++ b/html/cadastro-empresa.html
@@ -33,21 +33,21 @@
                 <div class="forms">
                     <form action="" id="form">
                         <div class="inputbox">
-                            <input type="text" id="nome" required>
+                            <input type="text" placeholder="Insira um nome" id="nome" required>
                             <label for="nome">Nome Completo:</label>
                             <span id="nomeError" style="color: red; display: none;"></span>
                         </div>
                         <div class="inputbox">
-                            <input type="text" id="razaoSocial" required>
+                            <input type="text" placeholder="Insira sua razão social" id="razaoSocial" required>
                             <label for="razaoSocial" >Razão Social:</label>
                         </div>
                         <div class="inputbox">
-                            <input type="text" id="cep" required>
+                            <input type="text" placeholder="Insira o CEP:" id="cep" required>
                             <label for="cep">CEP:</label>
                             <span id="cepError" style="color: red; display: none;"></span>
                         </div>
                         <div class="inputbox">
-                            <input type="text" id="cnpj" required>
+                            <input type="text" placeholder="Insira o CNPJ:"" id="cnpj" required>
                             <label for="cnpj">CNPJ:</label>
                             <span id="cnpjError" style="color: red; display: none;"></span>
                         </div>
