--- a/html/cadastro-empresa2.html
+++ b/html/cadastro-empresa2.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro Empresa</title>
     <script type="module" src="../js/cadastro-empresa2.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
@@ -29,23 +30,27 @@
         <div class="container">
             <form action="">
                 <div class="inputbox">
-                    <input type="text" id="cep" placeholder="Digite seu CEP">
-                    <label for="cep">CEP:</label>
+                    <input type="text" id="numero_telefone" placeholder="Digite seu número:">
+                    <label for="numero">Número de telefone:</label>
+                    <span id="numeroError" style="color: red; display: none;"></span>
                 </div>
 
                 <div class="inputbox">
-                    <input type="file" id="img">
+                    <input type="file" id="img_perfil">
                     <label for="img">Imagem de Perfil:</label>
+                    
                 </div>
 
                 <div class="inputbox">
                     <input type="email" id="email" placeholder="Digite seu e-mail">
                     <label for="email">Email:</label>
+                    <span id="emailError" style="color: red; display: none;"></span>
                 </div>
 
                 <div class="inputbox">
-                    <input type="text" id="senha" placeholder="Digite sua senha">
+                    <input type="password" id="senha" placeholder="Digite sua senha">
                     <label for="senha">Senha:</label>
+                    <span id="senhaError" style="color: red; display: none;"></span>
                 </div>
 
                 <div>
