--- a/html/opçãocadastro.html
+++ b/html/opçãocadastro.html
@@ -27,7 +27,7 @@
                 </div>
             </button>
         </a>
-        <a href="./cadastro-empresa1.html">
+        <a href="./cadastro-empresa.html">
             <button class="button">
                 <div class="button-content">
                     <h1>Empresa</h1>
