--- a/html/paginaHome.html
+++ b/html/paginaHome.html
@@ -40,17 +40,17 @@
                         <div class="card">
                             <img src="../css/img/motorista.png" alt="motorista">
                             <h2>Motoristas <br> Trabalhando </h2>
-                            <button class="button-access">Acessar</button>
+                            <button class="button-access">22</button>
                         </div>
                         <div class="card">
                             <img src="../css/img/van.png" alt="ativas">
                             <h2>Viagens <br> Ativas</h2>
-                            <button class="button-access">Acessar</button>
+                            <button class="button-access">14</button>
                         </div>
                         <div class="card">
                             <img src="../css/img/tarefa-concluida.png" alt="concluidas">
                             <h2>Viagens <br> Concluídas</h2>
-                            <button class="button-access">Acessar</button>
+                            <button class="button-access">10</button>
                         </div>
                     </div>
                     
