ajustes tela de cadastro

--- a/html/cadastro-empresa.html
+++ b/html/cadastro-empresa.html
@@ -47,7 +47,7 @@
                             <span id="cepError" style="color: red; display: none;"></span>
                         </div>
                         <div class="inputbox">
-                            <input type="text" placeholder="Insira o CNPJ:"" id="cnpj" required>
+                            <input type="text" placeholder="Insira o CNPJ:" id="cnpj" required>
                             <label for="cnpj">CNPJ:</label>
                             <span id="cnpjError" style="color: red; display: none;"></span>
                         </div>
