--- a/html/cadastro-empresa2.html
+++ b/html/cadastro-empresa2.html
@@ -54,8 +54,10 @@
                 </div>
 
                 <div>
-                    <button id="next2">Cadastrar</button>
-                    <p>Já possui uma conta? <span class="palavra">Login</span></p>
+                    <button id="next2">Cadastrar ></button>
+                    <p>Já possui uma conta?  
+                        <a href="login.html" class="palavra">Login</a>  
+                    </p>
                 </div>
             </form>
         </div>
