--- a/html/viagens.html
+++ b/html/viagens.html
@@ -23,7 +23,7 @@
             <div class="button-group">
                 <a href="paginaHome.html" class="button historico">Home</a>
                 <a href="viagens.html" class="button viagens">Viagens</a>
-                <a href="*motoristas*" class="button motoristas">Motoristas</a>
+                <a href="motoristas.html" class="button motoristas">Motoristas</a>
                 <a href="perfil-motorista.html" class="button test"><p>Perfil</p></a> 
                 <button id="openModal" class="text-white font-font underline font-semibold text-[12px] border-white w-48 h-10 rounded-xl">
                     Criar Viagem
