--- a/html/cadastro-empresa2.html
+++ b/html/cadastro-empresa2.html
@@ -1,73 +1,81 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro Empresa</title>
-    <script type="module" src="../js/cadastro-empresa2.js" defer></script>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script type="module" src="../js/cadastro-empresa1.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/cadastro.css">
     <link rel="stylesheet" href="../css/root.css">
-</head>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../css/cadastro.css"> 
 
-<body>
+</head> 
+
+<body> 
+
+    <div class="container"> 
+        <section class="passos"> 
+            <div class="passo"> 
+                <div class="passo-circulo"></div> 
+                <div class="passo-borda"></div> 
+            </div>   
+            <div class="passo2"> 
+                <div class="passo-circulo"></div>
+                <div class="passo-borda"></div>  
+            </div> 
+
+</div> 
+
     <div class="container">
-        <section class="passos">
-            <div class="passo">
-                <div class="passo-circulo"></div>
-                <div class="passo-borda"></div>
-            </div>
-            <div class="passo">
-                <div class="passo-circulo"></div>
-                <div class="passo-borda"></div>
-            </div>
-        </section>
-
-        <div class="container">
-            <form action="">
-                <div class="inputbox">
-                    <input type="text" id="numero_telefone" placeholder="Digite seu número:">
-                    <label for="numero">Número de telefone:</label>
-                    <span id="numeroError" style="color: red; display: none;"></span>
+        <selection>
+                <div class="forms">
+                    <form action="" id="form">
+                        <div class="inputbox">
+                    <input type="text" id="cep" placeholder="Digite seu CEP">
+                    <label for="cep">CEP:</label>
                 </div>
 
                 <div class="inputbox">
-                    <input type="file" id="img_perfil">
+                    <input type="file" id="img">
                     <label for="img">Imagem de Perfil:</label>
-                    
                 </div>
 
                 <div class="inputbox">
                     <input type="email" id="email" placeholder="Digite seu e-mail">
                     <label for="email">Email:</label>
-                    <span id="emailError" style="color: red; display: none;"></span>
                 </div>
 
                 <div class="inputbox">
-                    <input type="password" id="senha" placeholder="Digite sua senha">
+                    <input type="text" id="senha" placeholder="Digite sua senha">
                     <label for="senha">Senha:</label>
-                    <span id="senhaError" style="color: red; display: none;"></span>
                 </div>
 
                 <div>
-                    <button id="next2">Cadastrar ></button>
-                    <p>Já possui uma conta?  
-                        <a href="login.html" class="palavra">Login</a>  
-                    </p>
+                    <button id="next" type="button"> Continuar >
+                        
+                    </button>
+                        <p>Cadastrar >  
+                            <a href="login.html" class="palavra">Login</a>  
+                        </p>
                 </div>
             </form>
         </div>
-
-        <div class="desc-container">
-            <h1>Crie uma conta para gerenciar sua empresa!</h1>
-            <p>Com a Transporta Web, você pode gerenciar toda a operação de transporte, melhorar a comunicação entre a empresa e o motorista, e acompanhar o progresso em tempo integral.</p>
-            <img src="../css/img/cadastro.png" alt="Cadastro">
+</selection>
+</div>
+<div class="desc-container" >
+<h1>Crie uma conta para gerenciar sua empresa!</h1>
+<p>Com a Transporta Web, você pode gerenciar toda a operação de transporte, 
+melhorar a comunicação entre a empresa e o motorista, 
+e acompanhar o progresso em tempo integral.</p>
+      <img src="../css/img/cadastro.png"> 
         </div>
-    </div>
+
 </body>
 
 </html>
+
+</html>
+
+
