--- a/html/cadastro-empresa.html
+++ b/html/cadastro-empresa.html
@@ -56,7 +56,7 @@
                                 
                             </button>
                                 <p>Já possui uma conta?  
-                                    <a href="login.html" class="palavra">Login</a>  
+                                    <a href="../html/login.html" class="palavra">Login</a>  
                                 </p>
                         </div>
                     </form>
