--- a/html/cadastro-empresa2.html
+++ b/html/cadastro-empresa2.html
@@ -53,11 +53,11 @@
                 </div>
 
                 <div>
-                    <button id="next" type="button"> Continuar >
+                    <button id="next" type="button"> Cadastrar >
                         
                     </button>
-                        <p>Cadastrar >  
-                            <a href="login.html" class="palavra">Login</a>  
+                        <p>Já possui uma conta?   
+                            <a href="../html/login.html" class="palavra">Login</a>  
                         </p>
                 </div>
             </form>
