--- a/html/cadastro-empresa2.html
+++ b/html/cadastro-empresa2.html
@@ -65,7 +65,7 @@
 </selection>
 </div>
 <div class="desc-container" >
-<h1>Crie uma conta para gerenciar sua empresa!</h1>
+<h1>Finalizando...</h1>
 <p>Com a Transporta Web, você pode gerenciar toda a operação de transporte, 
 melhorar a comunicação entre a empresa e o motorista, 
 e acompanhar o progresso em tempo integral.</p>
