--- a/html/viagens.html
+++ b/html/viagens.html
@@ -32,8 +32,9 @@
         </div>
     </header>
     <div class="pesquisa">
-        <input type="text" id="pesquisa" placeholder="Buscar Viagem">
-    </div>
+    <input type="text" id="pesquisa" placeholder="Pesquise por ID da viagem">
+
+    </div>    
     <main class="grow flex">
         <div class="modal-background" id="modalBackground" style="display: none;">
             <div class="modal">
