--- a/html/contatos.html
+++ b/html/contatos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TransportaWeb</title>
-    <link rel="stylesheet" href="/css/contatos.css">
+    <link rel="stylesheet" href="../css/contatos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -13,14 +13,14 @@
     <header>
         <div class="header-container">
             <div class="logo">
-                <img src="/img/logo_sem_fundo.png" alt="Logo" height="80">
+                <img src="../css/img/logo_sem_fundo.png" alt="Logo" height="80">
             </div>
             <div class="button-group">
-                <a href="/principal.html" class="button transparent-solucoes">Soluções</a>
-                <a href="/html/sobre-nos.html" class="button transparent-sobre-nos">Sobre Nós</a>
-                <a href="/html/contatos.html" class="button transparent-contatos">Contatos</a>
-                <a href="/html/opçãocadastro.html" class="button test">Faça um teste!</a> 
-                <a href="/html/login.html" class="button client-area">Área do Cliente</a> 
+                <a href="../html/principal.html" class="button transparent-solucoes">Soluções</a>
+                <a href="../html/sobre-nos.html" class="button transparent-sobre-nos">Sobre Nós</a>
+                <a href="../html/contatos.html" class="button transparent-contatos">Contatos</a>
+                <a href="../html/opçãocadastro.html" class="button test">Faça um teste!</a> 
+                <a href="../html/login.html" class="button client-area">Área do Cliente</a> 
             </div>
         </div>
     </header>
@@ -39,7 +39,7 @@
     </section>
 
     <footer class="footer">
-        <div class="logobaixa"><img src="/img/logo com fundo branco.PNG" alt="logo da empresa" height="80"></div>
+        <div class="logobaixa"><img src="../css/img/logo com fundo branco.PNG" alt="logo da empresa" height="80"></div>
         <div class="footer-container">
             <span class="text-muted">
                 WEBTRANSPORTA@WEBTRANSPORTA.COM<br>
