--- a/html/opçãocadastro.html
+++ b/html/opçãocadastro.html
@@ -20,27 +20,32 @@
     <main>
         <a href="cadastro-motorista1.html">
             <button class="button">
-                <div class="button-content">
+                <div class="button-left">
                     <h1>Motorista</h1>
                     <p>Crie uma conta como motorista para se afiliar à uma empresa!</p>
-                    <img src="/img/pessoa png.png" alt="Motorista" class="button-icon">
+                </div>
+                <div class="button-right">
+                    <img src="../css/img//pessoa png.png" alt="Motorista" class="button-icon">
                 </div>
             </button>
         </a>
-        <a href="./cadastro-empresa.html">
+        <a href="../html/cadastro-empresa.html">
             <button class="button">
-                <div class="button-content">
+                <div class="button-left">
                     <h1>Empresa</h1>
                     <p>Crie uma conta para gerenciar seus funcionários e facilitar a gestão da empresa!</p>
-                    <img src="/img/caminhãopng.png" alt="Empresa" class="button-icon">
+                </div>
+                <div class="button-right">
+                    <img src="../css/img/caminhao-de-carga.png" alt="Empresa" class="button-icon">
                 </div>
             </button>
         </a>
     </main>  
     <footer>
         <div class="link">
-            <a href="/principal.html"><p>Voltar à tela inicial?</p></a>
+            <a href="../html/principal.html"><p>Voltar à tela inicial?</p></a>
         </div>
     </footer>
 </body>
 </html>
+
