ajustes cadastro/login/home/cadastro-empresa/motoristas

--- a/html/cadastro-motorista1.html
+++ b/html/cadastro-motorista1.html
@@ -33,25 +33,25 @@
                 <div class="forms">
                     <form action="" id="form">
                         <div class="inputbox">
-                            <input type="text" placeholder="Insira um nome" id="nome" required>
+                            <input type="text" placeholder="Insira seu nome completo" id="nome" required>
                             <label for="nome">Nome Completo:</label>
                             <span id="nomeError" style="color: red; display: none;"></span>
                         </div>
                         <div class="inputbox">
-                            <input type="text" placeholder="Insira sua razão social" id="razaoSocial" required>
-                            <label for="razaoSocial" >Razão Social:</label>
+                            <input type="email" placeholder="Insira seu email" id="email" required>
+                            <label for="email">Email:</label>
+                            <span id="emailError" style="color: red; display: none;"></span>
                         </div>
                         <div class="inputbox">
-                            <input type="text" placeholder="Insira o CEP:" id="cep" required>
-                            <label for="cep">CEP:</label>
-                            <span id="cepError" style="color: red; display: none;"></span>
+                            <input type="password" placeholder="Crie uma senha" id="senha" required>
+                            <label for="senha">Senha:</label>
+                            <span id="senhaError" style="color: red; display: none;"></span>
                         </div>
                         <div class="inputbox">
-                            <input type="text" placeholder="Insira o CNPJ:" id="cnpj" required>
-                            <label for="cnpj">CNPJ:</label>
-                            <span id="cnpjError" style="color: red; display: none;"></span>
+                            <input type="password" placeholder="Confirme sua senha" id="confirmarSenha" required>
+                            <label for="confirmarSenha">Confirmar Senha:</label>
+                            <span id="confirmarSenhaError" style="color: red; display: none;"></span>
                         </div>
-                        <div>
                             <button id="next" type="button"> Continuar >
                                 
                             </button>
@@ -65,9 +65,10 @@
     </div>
         <div class="desc-container" >
       <h1>Crie uma conta!</h1>
-      <p>Com a Transporta Web, você pode gerenciar toda a operação de transporte, 
-        melhorar a comunicação entre a empresa e o motorista, 
-        e acompanhar o progresso em tempo integral.</p>
+      <p>Com a Transporta Web, 
+        você pode gerenciar toda a operação de transporte,
+         melhorar a comunicação entre a empresa e o motorista,
+          e acompanhar o progresso em tempo integral.</p>
               <img src="../css/img/cadastro.png"> 
                 </div>
 
