--- a/html/motoristas.html
+++ b/html/motoristas.html
@@ -35,7 +35,7 @@
                 <p>Simplifique a gestão do seu time com uma plataforma que centraliza todas as informações. Tenha acesso rápido e fácil a todos os usuários que fazem parte da sua equipe, facilitando a administração e o acompanhamento das atividades.</p>
             </div>
             <div class="illustration">
-                <img src="../img/foto-equipe.png" alt="Team Illustration">
+                <img src="../css/img/foto-equipe.png" alt="Team Illustration">
             </div>
         </section>
         <div class="pesquisa">
