--- a/html/opcaocadastro.html
+++ b/html/opcaocadastro.html
@@ -29,7 +29,7 @@
                 </div>
             </button>
         </a>
-        <a href="../html/cadastro-empresa.html">
+        <a href="../html/cadastro-empresa1.html">
             <button class="button">
                 <div class="button-left">
                     <h1>Empresa</h1>
