--- a/html/viagens.html
+++ b/html/viagens.html
@@ -118,12 +118,17 @@
         </div>
      <!-- Modal de detalhes da viagem -->
 <div id="modalDetalhes" class="modal-background" style="display:none;">
-    <div class="modal-content">
+    <div class="modal-contentt">
         <span id="closeModalDetalhes" class="close">&times;</span>
         <h2>Detalhes da Viagem</h2>
         <div id="detalhesViagem"></div>
+        
+        <!-- Botões de editar e excluir -->
+        <button id="editButton">Editar</button>
+        <button id="deleteButton">Excluir</button>
     </div>
 </div>
+
 
     </main>
 </body>
