--- a/html/cadastro-motorista2.html
+++ b/html/cadastro-motorista2.html
@@ -14,7 +14,9 @@
 </head> 
 
 <body> 
-
+    <a href="../html/principal.html">
+        <img class="seta-esquerda" src="../css/img/seta-esquerda (2).png" alt="Seta Esquerda">
+      </a> 
     <div class="container"> 
         <section class="passos"> 
             <div class="passo"> 
