--- a/html/viagens.html
+++ b/html/viagens.html
@@ -108,6 +108,15 @@
                             <!-- Adicione mais opções aqui, conforme necessário -->
                         </select>
                     </div>
+                    <div class="form-group">
+                        <span class="detalhes">Carga:</span>
+                        <select id="id_carga" name="id_carga" required>
+                            <option value="selecione">Selecione um tipo de carga:</option>
+                            <!-- <option value="ABC123">ABC123</option>
+                            <option value="DEF456">DEF456</option> -->
+                            <!-- Adicione mais opções aqui, conforme necessário -->
+                        </select>
+                    </div>
                     
                     <button type="submit">Salvar Viagem</button>
                 </form>
