--- a/html/principal.html
+++ b/html/principal.html
@@ -14,7 +14,7 @@
                 <h1></h1>
             </div>
             <div class="button-group">
-                <a href="../html/principal.html" class="button transparent-solucoes"  style="color: #D92727;">Soluções</a>
+                <a href="../html/principal.html" class="button transparent-solucoes">Soluções</a>
                 <a href="../html/sobre-nos.html" class="button transparent-sobre-nos">Sobre Nós</a>
                 <a href="../html/contatos.html" class="button transparent-contatos">Contatos</a>
                 <a href="../html/opcaocadastro.html" class="button test">Faça um teste!</a> 
