--- a/html/motoristas.html
+++ b/html/motoristas.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <title>TransportaWeb</title>
     <link rel="stylesheet" href="../css/motoristas.css">
-    <link rel="stylesheet" href="../css/root.css">
     <script src="../js/funcoes.js" type="module" defer></script>
     <script src="../js/motoristas.js" type="module" defer></script>
 </head>
@@ -36,7 +35,7 @@
                 <p>Simplifique a gestão do seu time com uma plataforma que centraliza todas as informações. Tenha acesso rápido e fácil a todos os usuários que fazem parte da sua equipe, facilitando a administração e o acompanhamento das atividades.</p>
             </div>
             <div class="illustration">
-                <img src="../css/img/caminhaozinho.png" alt="Team Illustration">
+                <img src="../css/img/foto-equipe.png" alt="Team Illustration">
             </div>
         </section>
         <div class="pesquisa">
