--- a/html/paginaHome.html
+++ b/html/paginaHome.html
@@ -20,10 +20,11 @@
                         <span>Bem-vindo,<br><span class="name">Fulano de Tal</span></span>
                     </div>
                     <div class="button-group">
-                        <a href="paginaHome.html" class="button home">Home</a>
+                        <a href="/**/" class="button home">Home</a>
                         <a href="viagens.html" class="button viagens">Viagens</a>
                         <a href="motoristas.html" class="button motoristas">Motoristas</a>
                         <a href="perfil-motorista.html" class="button test"><p>Perfil</p></a> 
+                        <a href="chat.html" class="button test"><p>Chat</p></a> 
                 </div>
             </header>
             
