--- a/html/sobre-nos.html
+++ b/html/sobre-nos.html
@@ -5,8 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TransportaWeb</title>
     <link rel="stylesheet" href="../css/quem-somos.css">
-    <link rel="stylesheet" href="../css/root.css">
-
 </head>
 <body>
     <header>
@@ -17,7 +15,7 @@
             </div>
             <div class="button-group">
                 <a href="../html/principal.html" class="button transparent-solucoes">Soluções</a>
-                <a href="../html/sobre-nos.html" class="button transparent-sobre-nos" style="color: #D92727;">Sobre Nós</a>
+                <a href="../html/sobre-nos.html" class="button transparent-sobre-nos">Sobre Nós</a>
                 <a href="../html/contatos.html" class="button transparent-contatos">Contatos</a>
                 <a href="../html/opçãocadastro.html" class="button test">Faça um teste!</a> 
                 <a href="../html/login.html" class="button client-area">Área do Cliente</a> 
@@ -29,7 +27,7 @@
     <section class="info-section">
         <div class="info-item special">
             <h2>Quem Somos?</h2>
-            <img class="pessoas" src="../css/img//6 pessoas sem fundo.png" alt="Ícone de atualização">
+            <img src="../css/img//6 pessoas sem fundo.png" alt="Ícone de atualização" height="80">
             <p>Nós somos a NEXUS. Fundada em 2024, nossa missão é desenvolver aplicações com o intuito de facilitar a vida dos nossos clientes com a maior acessibilidade possível. Atualmente, temos nos dedicado a elaborar uma aplicação para o campo logístico , que ajude empresas e motoristas a se comunicarem melhor e que facilite a experiência dos usuários.
                 Nossa equipe é composta por profissionais dedicados e experientes.  Trabalhamos constantemente para oferecer qualidade, excelência, atendimento e garantir a satisfação de nossos clientes.
                 </p>
