--- a/html/motoristas.html
+++ b/html/motoristas.html
@@ -23,8 +23,10 @@
             <div class="button-group">
                 <a href="paginaHome.html" class="button historico">Home</a>
                 <a href="viagens.html" class="button viagens">Viagens</a>
-                <a href="motoristas.html" class="button motoristas">Motoristas</a> <!-- Corrigido para o link correto -->
-                <a href="perfil-motorista.html" class="button test"><p>Perfil</p></a> 
+                <a href="motoristas.html" class="button motoristas">Equipe</a>
+                <a href="perfilEmpresa.html" class="button test"><p>Perfil</p></a> 
+                <a href="chat.html" class="button test"><p>Chat</p></a> 
+
             </div>
         </div>
     </header>
