--- a/html/paginaHome.html
+++ b/html/paginaHome.html
@@ -22,8 +22,8 @@
                     <div class="button-group">
                         <a href="/**/" class="button home">Home</a>
                         <a href="viagens.html" class="button viagens">Viagens</a>
-                        <a href="motoristas.html" class="button motoristas">Motoristas</a>
-                        <a href="perfil-motorista.html" class="button test"><p>Perfil</p></a> 
+                        <a href="motoristas.html" class="button motoristas">Equipe</a>
+                        <a href="perfilEmpresa.html" class="button test"><p>Perfil</p></a> 
                         <a href="chat.html" class="button test"><p>Chat</p></a> 
                 </div>
             </header>
