--- a/html/paginaHome.html
+++ b/html/paginaHome.html
@@ -9,7 +9,7 @@
             <title>TransportaWeb</title>
             <link rel="stylesheet" href="../css/paginaHome.css">
             <link rel="stylesheet" href="../css/root.css">
-            <script src="script.js"></script>
+            <script src="../js/home.js" defer type="module"></script>
         </head>
         <body>
             
@@ -17,7 +17,7 @@
                 <div class="header-container">
                     <div class="profile-container">
                         <img src="../css/img/ft-perfil.png" alt="Foto de Perfil">
-                        <span>Bem-vindo,<br><span class="name">Fulano de Tal</span></span>
+                        <span>Bem-vindo,<br><span class="name" id="empresaNome"></span></span>
                     </div>
                     <div class="button-group">
                         <a href="/**/" class="button home">Home</a>
