integrei home com back

--- a/html/paginaHome.html
+++ b/html/paginaHome.html
@@ -16,7 +16,7 @@
             <header>
                 <div class="header-container">
                     <div class="profile-container">
-                        <img src="../css/img/ft-perfil.png" alt="Foto de Perfil">
+                        <img src="" id="foto-url" alt="Foto de Perfil">
                         <span>Bem-vindo,<br><span class="name" id="empresaNome"></span></span>
                     </div>
                     <div class="button-group">
