--- a/html/login.html
+++ b/html/login.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="../css/botao.css">
     <link rel="stylesheet" href="../css/checkbox.css">
     <script type="module" src="../js/login.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>  <!-- Script do SweetAlert2 --> 
     <link
         href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
@@ -21,9 +22,6 @@
 <body>
     <main>
         <section class="login-area">
-
-        
-
             <div class="role-selection">
                 <div class="role-option">
                     <input type="checkbox" id="empresa" name="role" value="empresa">
