--- a/html/viagens.html
+++ b/html/viagens.html
@@ -17,7 +17,7 @@
     <header>
         <div class="header-container">
             <div class="profile-container">
-                <img src="../css/img/ft-perfil.png" alt="Foto de Perfil">
+                <img src="" id="foto-url" alt="Foto de Perfil">
                 <span>Bem-vindo,<br><span class="name" id="empresaNome"></span></span>
             </div>
             <div class="button-group">
@@ -32,7 +32,7 @@
         </div>
     </header>
     <div class="pesquisa">
-    <input type="text" id="pesquisa" placeholder="Pesquise por ID da viagem">
+    <input type="text" id="pesquisa" placeholder="Pesquise por uma viagem através de seu id.">
 
     </div>    
     <main class="grow flex">
