--- a/html/chat.html
+++ b/html/chat.html
@@ -19,7 +19,12 @@
 </head>
 
 <body>
-
+    <div class="seta-voltar">
+        <a href="../html/paginaHome.html">
+            <img src="../css/img/seta branca.png" alt="Voltar à página principal">
+        </a>
+    </div>
+    
     <section class="side-bar" id="sideBar">
         <div class="message-icon">
             <!-- <img src="./img/balao-de-fala.png" alt="message"> -->
