--- a/html/perfilEmpresa.html
+++ b/html/perfilEmpresa.html
@@ -9,11 +9,18 @@
    <link rel="stylesheet" href="../css/root.css">
 </head>
 <body>
+    <div class="voltar">
+        <a href="../html/paginaHome.html">
+            <img src="../css/img/seta branca.png" alt="Voltar à página principal">
+        </a>
+    </div>
+
    <div class="container-t">
        <div class="img"></div>
        <button class="trocar-foto">Trocar foto de perfil</button>
        <button class="remover">Remover</button>
    </div>
+
 
    <div class="container-b">
     <form action="#">
