--- a/html/paginaHome.html
+++ b/html/paginaHome.html
@@ -21,6 +21,7 @@
                     </div>
                     <div class="button-group">
                         <a href="/**/" class="button home">Home</a>
+                        <a href="ceps.html" class="button cep">Ceps</a>
                         <a href="viagens.html" class="button viagens">Viagens</a>
                         <a href="motoristas.html" class="button motoristas">Motoristas</a>
                         <a href="perfil-motorista.html" class="button test"><p>Perfil</p></a> 
