--- a/html/motoristas.html
+++ b/html/motoristas.html
@@ -21,10 +21,11 @@
                 <span>Bem-vindo,<br><span class="name" id="empresaNome"></span></span>
             </div>
             <div class="button-group">
-                <a href="paginaHome.html" class="button historico">Home</a>
-                <a href="viagens.html" class="button viagens">Viagens</a>
-                <a href="motoristas.html" class="button motoristas">Motoristas</a> <!-- Corrigido para o link correto -->
-                <a href="perfil-motorista.html" class="button test"><p>Perfil</p></a> 
+                <a href="/**/" class="button home">Home</a>
+                        <a href="ceps.html" class="button cep">Ceps</a>
+                        <a href="viagens.html" class="button viagens">Viagens</a>
+                        <a href="motoristas.html" class="button motoristas">Motoristas</a>
+                        <a href="perfil-motorista.html" class="button test"><p>Perfil</p></a> 
             </div>
         </div>
     </header>
