--- a/html/motoristas.html
+++ b/html/motoristas.html
@@ -39,6 +39,11 @@
                 <img src="../img/foto-equipe.png" alt="Team Illustration">
             </div>
         </section>
+        <div class="opcaofree">
+        <p>Empregados</p>
+        <button class="toggle-btn left"></button>
+        <p>FreeLancers</p>
+    </div>
         <div class="pesquisa">
             <input type="text" id="pesquisa" placeholder="Buscar Motorista"> <!-- Atualizado para refletir a busca por motoristas -->
         </div>
