--- a/html/motoristas.html
+++ b/html/motoristas.html
@@ -21,7 +21,7 @@
                 <span>Bem-vindo,<br><span class="name" id="empresaNome"></span></span>
             </div>
             <div class="button-group">
-                <a href="/**/" class="button home">Home</a>
+                <a href="paginaHome.html" class="button home">Home</a>
                         <a href="ceps.html" class="button cep">Ceps</a>
                         <a href="viagens.html" class="button viagens">Viagens</a>
                         <a href="motoristas.html" class="button motoristas">Motoristas</a>
@@ -36,7 +36,7 @@
                 <p>Simplifique a gestão do seu time com uma plataforma que centraliza todas as informações. Tenha acesso rápido e fácil a todos os usuários que fazem parte da sua equipe, facilitando a administração e o acompanhamento das atividades.</p>
             </div>
             <div class="illustration">
-                <img src="../img/foto-equipe.png" alt="Team Illustration">
+                <img src="../css/img/foto-equipe.png" alt="Team Illustration">
             </div>
         </section>
         <div class="opcaofree">
