--- a/html/paginaHome.html
+++ b/html/paginaHome.html
@@ -24,7 +24,7 @@
                         <a href="ceps.html" class="button cep">Ceps</a>
                         <a href="viagens.html" class="button viagens">Viagens</a>
                         <a href="motoristas.html" class="button motoristas">Motoristas</a>
-                        <a href="perfil-motorista.html" class="button test"><p>Perfil</p></a> 
+                        <a href="perfilEmpresa.html" class="button test"><p>Perfil</p></a> 
                 </div>
             </header>
             
