add o modal de notificação

--- a/html/motoristas.html
+++ b/html/motoristas.html
@@ -25,7 +25,10 @@
                         <a href="ceps.html" class="button cep">Ceps</a>
                         <a href="viagens.html" class="button viagens">Viagens</a>
                         <a href="motoristas.html" class="button motoristas">Motoristas</a>
-                        <a href="perfil-motorista.html" class="button test"><p>Perfil</p></a> 
+                        <a href="perfilEmpresa.html" class="button test"><p>Perfil</p></a>
+                        <a href="#" class="button alert" id="alertButton">
+                            <img src="../css/img/sino-de-notificacao.png" alt="Ícone de alerta">
+                        </a> 
             </div>
         </div>
     </header>
