--- a/html/viagens.html
+++ b/html/viagens.html
@@ -24,7 +24,10 @@
                 <a href="paginaHome.html" class="button historico">Home</a>
                 <a href="viagens.html" class="button viagens">Viagens</a>
                 <a href="motoristas.html" class="button motoristas">Motoristas</a>
-                <a href="perfil-motorista.html" class="button test"><p>Perfil</p></a> 
+                <a href="perfilEmpresa.html" class="button test"><p>Perfil</p></a>
+                <a href="#" class="button alert" id="alertButton">
+                    <img src="../css/img/sino-de-notificacao.png" alt="Ícone de alerta">
+                </a> 
                 <button id="openModal" class="text-white font-font underline font-semibold text-[12px] border-white w-48 h-10 rounded-xl">
                     Criar Viagem
                 </button>
