--- a/html/motoristas.html
+++ b/html/motoristas.html
@@ -10,23 +10,26 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <title>TransportaWeb</title>
     <link rel="stylesheet" href="../css/motoristas.css">
+    <link rel="stylesheet" href="../css/navbar.css">
+    <link rel="stylesheet" href="../css/root.css">
     <script src="../js/funcoes.js" type="module" defer></script>
     <script src="../js/motoristas.js" type="module" defer></script>
 </head>
 <body>
     <header>
-        <div class="header-container">
-            <div class="profile-container">
-                <img src="" id="foto-url" alt="Foto de Perfil">
-                <span>Bem-vindo,<br><span class="name" id="empresaNome"></span></span>
-            </div>
-            <div class="button-group">
-                <a href="paginaHome.html" class="button home">Home</a>
-                        <a href="ceps.html" class="button cep">Ceps</a>
-                        <a href="viagens.html" class="button viagens">Viagens</a>
-                        <a href="motoristas.html" class="button motoristas">Motoristas</a>
-                        <a href="perfil-motorista.html" class="button test"><p>Perfil</p></a> 
-            </div>
+        <div class="profile-container">
+            <img src="" id="foto-url" alt="Foto de Perfil">
+            <span>Bem-vindo,<br><span class="name" id="empresaNome"></span></span>
+        </div>
+        <div class="content-area">
+            <ul class="navbar">
+                <a href="./paginaHome.html">Home</a>
+                <a href="./viagens.html">Viagens</a>
+                <a href="./motoristas.html">Motoristas</a>
+                <a href="./ceps.html">Ceps</a>
+                <a href="./perfilEmpresa.html">Perfil</a>
+            </ul>
+            <a href="./chat.html"><button class="botao-chat">Chat</button></a>
         </div>
     </header>
     <main>
